# prefect-dvc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  data.dvc  dvc.yaml  image.dvc  main-deployment.yaml  metrics.csv  metrics.csv.dvc  model.dvc  my_flow-deployment.yaml  params.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: run_pipeline.yaml  test_code.yaml
config/: main.yaml
config/process/: process_1.yaml  process_2.yaml  process_3.yaml  process_4.yaml
data/: .gitignore  final.dvc  intermediate.dvc  raw.dvc
dvc_plots/: index.html
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: validate_raw.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/marketing_campaign/csv/: warning.json
notebook/: analyze_data.ipynb  analyze_data_out.ipynb
src/: create_block.py  get_data.py  helper.py  logger.py  main.py  process_data.py  run_notebook.py  segment.py  test.py
tests/: test_process_data.py
